# opencam

./: .gitignore  README.md  app.py  args_parser.py  camera.py  demo.py  detector.py  logger.py  main.py  pyproject.toml  recorder.py  runner.py  shower.py  ui_qt.py
modules/: __init__.py  args_parser.py  detector.py  recorder.py  runner.py  shower.py  task.py
