[project]
name = "opencamv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "opencv-python>=4.12.0",
    "loguru>=0.7.2",
    "numpy>=1.26",
    "pyside6>=6.10.0",
]

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true
